# minutes

./: .gitignore  Dockerfile.test  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: whitepaper.md
src/minutes/: add.py  browse.py  cli.py  display.py  models.py  store.py
src/tgsa/: add.py  cli.py  display.py  store.py
tests/: test_add.py  test_cli.py  test_display.py  test_models.py  test_store.py
