[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minutes"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "prompt_toolkit",
]

[project.scripts]
minutes = "minutes.cli:main"

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/minutes"]

[tool.pytest.ini_options]
testpaths = ["tests"]
